# pam-oidc

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure  configure.ac  http_client.h  jwt_helper.h  local_auth.c  pam_lic.c  pam_test  test.c
.github/workflows/: build.yml
doc/: Makefile.am  pam_oidc.8
lib/: Makefile.am  http_client.h  pam_helper.c  pam_helper.h
src/: Makefile.am  auth.h  http_client.c  http_client.h  id_token_auth.c  local_auth.c  pam_helper.c  pam_helper.h  pam_oidc.c  poll_auth.c
tests/: Makefile.am
